PFM-3780::Horizontal Bar chart and Pie chart alignment fixes (#5610)
* PFM-3780::Horizontal Bar chart and Pie chart alignment fixes

* Updated README.md

* Updated dss package.json

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/dss.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/dss.scss
@@ -258,6 +258,6 @@ border-color: rgba(244, 119, 56, var(--border-opacity));
 }
 
 .dss-horizontal-v2{
-  width: 21%;
-  max-width: 21%;
+  width: 22.7%;
+  max-width: 22.7%;
 }
